--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 801315140637163535
 textchannel = 801315140637163534
 ladderchannel = 
 jungsanchannel = 
