--- a/test_setting.ini
+++ b/test_setting.ini
@@ -10,9 +10,9 @@ itemchannel =
 
 before_alert = 1
 before_alert1 = 5
-mungChk1 = 
-mungChk2 = 
-delmungcnt = 
+mungChk1 = 10
+mungChk2 = 10
+delmungcnt = 20
 
 bossInfoNum = 3
 
