--- a/boss.ini
+++ b/boss.ini
@@ -76,6 +76,90 @@ before_alert_ment = 입니다
 alert_ment = 입니다. 좌절의 구릉지로 오세요
 mungtime = 1
 
+bossname = 1기셀라
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 어귀로 오세요
+mungtime = 1
+
+bossname = 1볼피
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 절벽으로 오세요
+mungtime = 1
+
+bossname = 1오르카
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 뿌리무덤으로 오세요
+mungtime = 1
+
+bossname = 1팬서
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 채석장으로 오세요
+mungtime = 1
+
+bossname = 2기셀라
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 어귀로 오세요
+mungtime = 1
+
+bossname = 2볼피
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 절벽으로 오세요
+mungtime = 1
+
+bossname = 2오르카
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 뿌리무덤으로 오세요
+mungtime = 1
+
+bossname = 2팬서
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 채석장으로 오세요
+mungtime = 1
+
+bossname = 3기셀라
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 어귀로 오세요
+mungtime = 1
+
+bossname = 3볼피
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 절벽으로 오세요
+mungtime = 1
+
+bossname = 3오르카
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 뿌리무덤으로 오세요
+mungtime = 1
+
+bossname = 3팬서
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 채석장으로 오세요
+mungtime = 1
+
 bossname = 4기셀라
 gentime = 23:00
 nogencheck = 1
@@ -98,6 +182,34 @@ alert_ment = 입니다. 기만의 뿌리무덤으로 오세요
 mungtime = 1
 
 bossname = 4팬서
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 채석장으로 오세요
+mungtime = 1
+
+bossname = 5기셀라
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 어귀로 오세요
+mungtime = 1
+
+bossname = 5볼피
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 절벽으로 오세요
+mungtime = 1
+
+bossname = 5오르카
+gentime = 23:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 기만의 뿌리무덤으로 오세요
+mungtime = 1
+
+bossname = 5팬서
 gentime = 23:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -200,4 +312,25 @@ gentime = 6:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 좌절의 황야으로 오세요
+mungtime = 1
+
+bossname = 이둔
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 붕괴된 암벽으로 오세요
+mungtime = 1
+
+bossname = 스노트라
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 붕괴된 모랫길로 오세요
+mungtime = 1
+
+bossname = 탄파나
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 붕괴된 수로로 오세요
 mungtime = 1
